--- a/default.hbs
+++ b/default.hbs
@@ -18,6 +18,7 @@
 
     {{!-- Styles'n'Scripts --}}
     <link rel="stylesheet" type="text/css" href="{{asset "css/main.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/prism.css"}}" />
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
@@ -40,8 +41,7 @@
 
     {{!-- The main JavaScript file for Mapache --}}
     <script src="{{asset "js/bundle.min.js"}}"></script>
-
-    {{!--  Font Roboto  && Roboto Mono --}}
-    <script type="text/javascript">WebFontConfig ={google:{families:['Roboto:300,400,500','Roboto+Mono']}};(function(){var wf=document.createElement('script');wf.src=('https:'==document.location.protocol?'https':'http')+'://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js';wf.type='text/javascript';wf.async='true';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(wf,s);})();</script>
+    {{!--prism.js syntax highlighting --}}
+    <script type="text/javascript" src="{{asset "js/prism.js"}}"></script>
 </body>
 </html>
